--- a/apps/frontend/app/style.css
+++ b/apps/frontend/app/style.css
@@ -15,7 +15,7 @@ body {
 @supports (min-block-size: 100dvh) {
   body {
     text-size-adjust: 100%;
-    min-block-size: 100vh;
+    min-block-size: 100dvh;
   }
 }
 
